--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/FeRojasr91/CapacitacionCypress#readme",
   "dependencies": {
     "cypress": "^14.0.0"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^10.1.0"
   }
 }
